--- a/notes/2018-05-07.md
+++ b/notes/2018-05-07.md
@@ -1,7 +1,5 @@
 # 5月7日读书笔记 - Dapp去中心化应用的优点和缺点
 
-Dapp去中心化应用的优点和缺点
-
 优点：
 
 - DApp 能容错，没有单点故障。
@@ -15,7 +13,7 @@ Dapp去中心化应用的优点和缺点
 - 创建去中心化应用比较困难，因为它们应用复杂的协议来达成共识，必须从最开始就自行创建并扩大规模。所以我们不能仅仅实现一个想法，然后不断添加功能，使其规模扩大。
 - DApp 理论上可以依赖于其他 DApp，但不能依赖与中心化的 Api。所以实践中创建 Dapp 仍然是比较困难的一件事。
 
-The Dao （Decentralized Autonomous Organization, DAO) - 去中心化自治组织
+## The Dao （Decentralized Autonomous Organization, DAO) - 去中心化自治组织
 
 一般来说，被签署的文件可以代表组织，而且政府能对它们产生影响。根据组织类型的不同，组织可能有股东，也可能没有股东。
 
